<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quiz_project3.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_gradient_background"
        android:paddingBottom="16dp"
        android:translationZ="1dp">

        <ImageView
            android:id="@+id/deftones_logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:src="@drawable/deftones_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/deftones_logo_img"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/subtitle_header"
            android:textColor="@color/secondaryTextColor" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-24dp"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/deftonesbandpic" />

                <TextView
                    style="@style/headerText"
                    android:text="@string/hi_intro_title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:padding="8dp"
                    android:text="@string/intro_text"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/anime_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/ic_arrow_downward_black_24dp" />


            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/headerText"
                    android:text="@string/title_question_1" />

                <TextView
                    style="@style/questionText"
                    android:text="@string/question_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/abe_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onCheckBoxCheck"
                            android:text="Abe Cunningham" />

                        <CheckBox
                            android:id="@+id/tom_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onCheckBoxCheck"
                            android:text="Tom Morello" />

                        <CheckBox
                            android:id="@+id/chi_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onCheckBoxCheck"
                            android:text="Chi Cheng" />

                        <CheckBox
                            android:id="@+id/steve_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onCheckBoxCheck"
                            android:text="Steve Carpenter" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <CheckBox
                            android:id="@+id/frank_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onCheckBoxCheck"
                            android:text="Frank Delgado" />

                        <CheckBox
                            android:id="@+id/chino_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onCheckBoxCheck"
                            android:text="Chino Moreno" />

                        <CheckBox
                            android:id="@+id/sergio_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onCheckBoxCheck"
                            android:text="Sergio Vega" />

                        <CheckBox
                            android:id="@+id/maynard_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onCheckBoxCheck"
                            android:text="Maynard James Keenan" />


                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="25dp"
                    android:background="@drawable/buttonshape"
                    android:onClick="submitCheckBoxQ1"
                    android:paddingHorizontal="16dp"
                    android:text="@string/go_button" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/headerText"
                    android:text="@string/title_question_2" />

                <TextView
                    style="@style/questionText"
                    android:text="@string/question_2" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="125dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/albumcover" />

                <!--This linearlayout prevents the EditText from focus when the app starts-->

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/q2_edittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginVertical="25dp"
                        android:layout_weight="4"
                        android:hint="@string/albumtitle"
                        android:nextFocusLeft="@id/q2_edittext"
                        android:nextFocusUp="@id/q2_edittext" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="25dp"
                        android:layout_weight="3"
                        android:background="@drawable/buttonshape"
                        android:onClick="submitEditTextAlbumart"
                        android:text="@string/go_button" />
                </LinearLayout>

            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/headerText"
                    android:text="@string/title_question_3" />

                <TextView
                    style="@style/questionText"
                    android:text="@string/question_3" />

                <RadioGroup
                    android:id="@+id/radiogroup_q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >

                    <RadioButton
                        android:id="@+id/radio_linux"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClickedQ3"
                        android:text="I Like Linux" />

                    <RadioButton
                        android:id="@+id/radio_deftonesep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClickedQ3"
                        android:text="Deftones EP" />

                    <RadioButton
                        android:id="@+id/radio_linus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClickedQ3"
                        android:text="(Like) Linus" />

                    <RadioButton
                        android:id="@+id/radio_eros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClickedQ3"
                        android:text="Eros" />


                </RadioGroup>

            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/headerText"
                    android:text="@string/title_question_4" />

                <TextView
                    style="@style/questionText"
                    android:text="@string/question_4" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/deftones_playing" />

                    <Button
                        android:id="@+id/clickPlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/buttonshape"
                        android:gravity="center"
                        android:onClick="clickPlay"
                        android:text="@string/play_button" />


                </RelativeLayout>

                <RadioGroup
                    android:id="@+id/radiogroup_q4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <RadioButton
                        android:id="@+id/radio_q4_bored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClickedQ4"
                        android:text="Bored" />

                    <RadioButton
                        android:id="@+id/radio_q4_school"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClickedQ4"
                        android:text="Back to School" />

                    <RadioButton
                        android:id="@+id/radio_q4_tempest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClickedQ4"
                        android:text="Tempest" />

                    <RadioButton
                        android:id="@+id/radio_q4_swerve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClickedQ4"
                        android:text="Swerve City" />

                </RadioGroup>

            </LinearLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp">

                <Button
                    android:id="@+id/result_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/buttonshape"
                    android:onClick="clickResult"
                    android:paddingHorizontal="32dp"
                    android:text="@string/show_result_button" />


                <ImageView
                    android:id="@+id/image_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/result_button"
                    android:layout_marginBottom="16dp"
                    android:adjustViewBounds="true"
                    android:alpha="1"
                    android:src="@drawable/deftones_show" />

                <TextView
                    android:id="@+id/result_text"
                    style="@style/headerText"
                    android:layout_below="@id/result_button"
                    android:freezesText="true"
                    android:text="@string/title_result" />

                <TextView
                    android:id="@+id/result_summary_text"
                    style="@style/questionText"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/result_text"
                    android:layout_centerHorizontal="true"
                    android:background="#D99499b7"
                    android:freezesText="true"
                    android:padding="8dp"
                    android:text=""
                    android:textColor="@color/secondaryTextColor" />

            </RelativeLayout>


            <View style="@style/Divider" />


            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/buttonshape"
                android:onClick="clickReset"
                android:paddingHorizontal="32dp"
                android:text="@string/try_again_button" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>